# zmq-interface

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  zmq_interface.pyi
conda/: py310_environment.yaml
examples/: test_client.py  test_communication.py  test_corner_cases.py  test_server.py  test_timestamps.py
include/: common.h  data_topic.h  zmq_client.h  zmq_message.h  zmq_server.h
src/: common.cpp  data_topic.cpp  pybind.cpp  zmq_client.cpp  zmq_message.cpp  zmq_server.cpp
zmq_interface/: __init__.py
zmq_interface/core/: zmq_interface.pyi
zmq_interface/core/include/: common.h
zmq_interface/core/src/: data_topic.cpp  pybind.cpp  zmq_message.cpp  zmq_server.cpp
